@@ -10,6 +10,7 @@ File (Field) Paths 7.x-1.x-dev, xxxx-xx-xx (development release)
 - #1985650: Fixed issue with moved Drush file in .info.
 - #1985280: Fixed issue with hook_entity_update() foreach loop.
 - #1495716/#1986472: Fixed issue with D6 -> D7 upgrade path.
+- Added tests.
 
 
 
